--- a/app/src/main/res/layout/bares_detalles.xml
+++ b/app/src/main/res/layout/bares_detalles.xml
@@ -6,4 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".Examen4.BaresDetalles">
 
+    <TextView
+        android:id="@+id/e4tvNombreDetalles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.101" />
+
+    <TextView
+        android:id="@+id/e4tvDescripcionDetalles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/e4tvNombreDetalles"
+        app:layout_constraintStart_toStartOf="@+id/e4tvNombreDetalles"
+        app:layout_constraintTop_toBottomOf="@+id/e4tvNombreDetalles" />
+
+    <TextView
+        android:id="@+id/e4tvEstrellasDetalles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="TextView"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/e4tvDescripcionDetalles"
+        app:layout_constraintStart_toStartOf="@+id/e4tvDescripcionDetalles"
+        app:layout_constraintTop_toBottomOf="@+id/e4tvDescripcionDetalles" />
 </androidx.constraintlayout.widget.ConstraintLayout>
